--- a/MSc Latex/main.tex
+++ b/MSc Latex/main.tex
@@ -304,7 +304,7 @@ Last but not the least, I would like to thank my partner Vo Thi Hanh Nhan, who h
 \include{Appendices/AppendixA}
 \include{Appendices/AppendixB}
 \include{Appendices/AppendixC}
-%\include{Appendices/AppendixD}
+\include{Appendices/AppendixD}
 
 %----------------------------------------------------------------------------------------
 %	BIBLIOGRAPHY
