--- a/MSc Latex/Appendices/AppendixA.tex
+++ b/MSc Latex/Appendices/AppendixA.tex
@@ -8,7 +8,7 @@ The source code for the application can be downloaded at \href{https://github.co
         \subfigure[Real time]{\label{fig:AppendixAa}\includegraphics[width=50mm]{Figures/CESARGUIWrapper.png}}
         \subfigure[EDF import]{\label{fig:AppendixAb}\includegraphics[width=50mm]{Figures/EDFimport.png}}
         \subfigure[EDF export]{\label{fig:AppendixAc}\includegraphics[width=50mm]{Figures/EDFexport.png}}
-        \subfigure[Database tasks]{\label{fig:AppendixAd}\includegraphics[width=50mm]{Figures/EDFexport.png}}
+        \subfigure[Database tasks]{\label{fig:AppendixAd}\includegraphics[width=50mm]{Figures/RawQuery.png}}
         \caption{Main fragments of the database application}
         \label{fig:AppendixA}
 \end{figure}
@@ -23,3 +23,5 @@ For non real time sources, a user must query a record based on either patient, o
 Since data records are stored separately for each channel, by choosing data records that have the same patient, physician, and timestamp information, a full record for a patient at a specific time is retrieved. Users does not need to select all data records of the full record to export to a EDF/EDF plus file, they can select only the data records for specific interested channels to export.
 \section{Raw query}
 Users can execute their customized SQL queries by summiting the queries to the text box that presented in Sub figure \ref{fig:AppendixAd}. Since the application does not filter out the vulnerable queries such as DELETE or DROP TABLE, users must be responsible for the queries they submit to the application.
+\section{BITalino simulator}
+The simulator is found on in the project folder of the thesis on github.com at 
