--- a/MSc Latex/example.bib
+++ b/MSc Latex/example.bib
@@ -1,7 +1,6 @@
 % !TEX encoding = UTF-8 Unicode
 @article{Westchester,
-	Abstract = {Sleep apnea, obstructive apnea, upper airway apnea, mixed apnea, hypersomnia sleep apnea syndrome, obesity hypoventilation syndrome, adenoidal hypertrophy, cor pulmonale syndrome, Pickwickian syn- drome. The terms Pickwickian syndrome and obesity hypoventilation syndrome are discouraged from use because they have been applied to several different sleep-related breathing disorders},
-	Author = { American Academy of Sleep Medicine.},
+	Author = {American\_Academy\_of\_Sleep\_Medicine},
 	Journal = {Obstructive Sleep Apnea Syndrome},
 	Keywords = {Sleep Disorders–Classification. Sleep Disorders–Diagnosis},
 	Pages = {52},
@@ -16,14 +15,14 @@
 	Retrieved = {2016}}
 	
 @article{HudsonOSA,
-	Author = {Hudson sleep and tmj center},
+	Author = {sleeptmjdr.com},
 	Title = {Obstructive sleep apnea},
 	Year = {2016},
 	Url = {http://sleeptmjdr.com/obstructive-sleep-apnea/},
 	Retrieved = {2016}}
 	
 @article{Akershus,
-	Author = {HARALD HRUBOS-STRØM et.al},
+	Author = {et.al Harald Hrubos-Strøm},
 	Title = {A Norwegian population-based study on the risk and prevalence of obstructive sleep apnea The Akershus Sleep Apnea Project (ASAP)},
 	Year = {16 June 2010},
 	Url = {http://onlinelibrary.wiley.com/doi/10.1111/j.1365-2869.2010.00861.x/full},
@@ -38,7 +37,7 @@
 }
 
 @article{ChestWorldCongress,
-	Author = {Mihaela Trenchea PhD Oana Deleanu Elena Dantes PhD Agripina Rascu Oana Arghir; and Paraschiva Postolache* Ovidius University of Constanta, Constanta, Romania},
+	Author = {et.al Mihaela},
 	Title = {Smoking, Drinking, Overweight, and Obstructive Sleep Apnea Among Patients With Sleep Breathing Disorders},
 	Year = {04.2016},
 	Url = {http://journal.publications.chestnet.org/data/Journals/CHEST/935163/02594.pdf},
@@ -46,7 +45,7 @@
 }
 
 @article{MAYOCLINIC,
-	Author = {By Mayo clinic staff},
+	Author = {mayoclinic.org},
 	Title = {Obstructive sleep apnea - Treatment},
 	Year = {June 15, 2016},
 	Url = {http://www.mayoclinic.org/diseases-conditions/obstructive-sleep-apnea/diagnosis-treatment/treatment/txc-20206034},
@@ -54,7 +53,7 @@
 }
 
 @article{ScienceDaily,
-	Author = {ScienceDaily},
+	Author = {sciencedaily.com},
 	Title = {Mayo Clinic Discovers New Type Of Sleep Apnea},
 	Year = {September 4, 2006},
 	Url = {https://www.sciencedaily.com/releases/2006/09/060901161349.htm},
@@ -62,7 +61,7 @@
 }
 
 @article{Hindawi,
-	Author = {Muhammad Talha Khan and Rose Amy Franco},
+	Author = {et.al Muhammad},
 	Title = {Complex Sleep Apnea Syndrome},
 	Year = {February 16, 2014},
 	Url = {http://www.hindawi.com/journals/sd/2014/798487/},
@@ -70,7 +69,7 @@
 }
 
 @article{BersainReyes,
-	Author = {Bersain Reyes et.al},
+	Author = {et.al Bersain Reyes},
 	Title = {Tidal Volume and Instantaneous Respiration Rate Estimation using a Smartphone Camera},
 	Year = {February 25, 2016},
 	Url = {http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=7415992},
@@ -78,7 +77,7 @@
 }
 
 @article{IEEEOSAEEG,
-	Author = {Wafaa S.Almuhammadi et.al},
+	Author = {et.al Wafaa S.Almuhammadi},
 	Title = {Efficient Obstructive Sleep Apnea Classification Based on EEG Signals},
 	Year = {May 1, 2015},
 	Url = {http://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=7160186},
@@ -86,7 +85,7 @@
 }
 
 @article{NCBIEGEPILEPSY,
-	Author = {Karakis et.al},
+	Author = {et.al Karakis},
 	Title = {The utility of routine EEG in the diagnosis of sleep disordered breathing.},
 	Year = {August 29, 2012},
 	Url = {http://www.ncbi.nlm.nih.gov/pubmed/22854767},
@@ -94,7 +93,7 @@
 }
 
 @article{SDEMG,
-	Author = {Marc B Blumen et.al},
+	Author = {et.al Marc B Blumen},
 	Title = {Tongue mechanical characteristics and genioglossus muscle EMG in obstructive sleep apnoea patients},
 	Year = {May 20, 2004},
 	Url = {http://www.sciencedirect.com/science/article/pii/S1569904803002933},
@@ -102,7 +101,7 @@
 }
 
 @article{JSREM,
-	Author = {Babak Mokhlesi et.al},
+	Author = {et.al Babak Mokhlesi},
 	Title = {“REM-related” Obstructive Sleep Apnea: An Epiphenomenon or a Clinically Important Entity?},
 	Year = {2012},
 	Url = {http://www.journalsleep.org/ViewAbstract.aspx?pid=28396},
@@ -110,7 +109,7 @@
 }
 
 @article{RESEARCHGATEEEG,
-	Author = {Sani M. Isa et.al},
+	Author = {et.al Sani M. Isa},
 	Title = {Sleep Apnea Detection from ECG Signal: Analysis on Optimal Features, Principal Components, and Nonlinearity},
 	Year = {May, 2011},
 	Url = {https://www.researchgate.net/publication/252005430_Sleep_Apnea_Detection_from_ECG_Signal_Analysis_on_Optimal_Features_Principal_Components_and_Nonlinearity},
@@ -118,7 +117,7 @@
 }
 
 @article{WIKIHOW,
-	Author = {Wiki how, M. Expert review by Janine Kelbach},
+	Author = {wikihow.com},
 	Title = {How to Measure Oxygen Saturation Using Pulse Oximeter},
 	Year = {August, 2016},
 	Url = {http://www.wikihow.com/Measure-Oxygen-Saturation-Using-Pulse-Oximeter},
@@ -126,7 +125,7 @@
 }
 
 @article{HINDIWAAIRFLOW,
-	Author = {Daniel de Sousa Michels et.al},
+	Author = {et.al Daniel de Sousa Michels},
 	Title = {Nasal Involvement in Obstructive Sleep Apnea Syndrome},
 	Year = {2014},
 	Url = {http://www.hindawi.com/journals/ijoto/2014/717419/},
@@ -151,14 +150,14 @@
 
 @article{Advan,
 	Author = {heart.org},
-	Title = {SLEEP AS A TEACHING TOOL FOR INTEGRATING RESPIRATORY PHYSIOLOGY AND MOTOR CONTROL},
+	Title = {Sleep as a teaching tool for integrating respiratory physiology and motor control},
 	Year = {June 2001},
 	Url = {http://advan.physiology.org/content/25/2/29},
 	Retrieved = {August 21, 2016}
 }
 
 @article{RESEARCHGATE,
-	Author = {Laiali Almazaydeh, Khaled Elleithy, Miad Faezipour},
+	Author = {et.al Laiali Almazaydeh},
 	Title = {Detection of Obstructive Sleep Apnea Through  ECG Signal Features},
 	Year = {May 2012},
 	Url = {https://www.researchgate.net/publication/254039441_Detection_of_obstructive_sleep_apnea_through_ECG_signal_features},
@@ -206,7 +205,7 @@
 }
 
 @article{LOGICALSENSOR_0,
-	Author = {Tom Henderson and Esther Shilcrat},
+	Author = {et.al Tom Henderson},
 	Title = {Logical Sensor System},
 	Year = {1984},
 	Url = {http://www.cs.utah.edu/~tch/publications/pub38.pdf},
@@ -214,7 +213,7 @@
 }
 
 @article{LOGICALSENSOR_1,
-	Author = {C.Hansen et.al},
+	Author = {et.al C.Hansen},
 	Title = {Logical sensor specification},
 	Url = {http://www.cs.utah.edu/~tch/publications/pub38.pdf},
 	Pages = {169-193},
@@ -222,7 +221,7 @@
 }
 
 @article{LOGICALSENSOR_3,
-	Author = {Carlos Carreiras et.al},
+	Author = {et.al Carlos Carreiras},
 	Title = {Logical Sensor Specification},
 	Year = {2011},
 	Url = {http://www.cs.utah.edu/~tch/publications/pub30.pdf},
@@ -230,7 +229,7 @@
 }
 
 @article{StorageBIT,
-	Author = {Charles Hansen et.al},
+	Author = {et.al Charles Hansen},
 	Title = {StorageBIT A Metadata-aware, Extensible, Semantic, and Hierarchical Database for Biosignals},
 	Year = {2011},
 	Url = {http://www.lx.it.pt/~afred/papers/StorageBIT.pdf},
@@ -238,14 +237,14 @@
 }
 
 @article{SensorDataAbstract,
-	Author = {Payam Barnaghi et.al},
+	Author = {et.al Payam Barnaghi},
 	Title = {Computing Perception from Sensor Data},
 	Url = {http://personal.ee.surrey.ac.uk/Personal/P.Barnaghi/doc/PID2479545.pdf},
 	Retrieved = {October 21, 2016}
 }
 
 @article{PhysioNet_Intro,
-	Author = {George B. Moody et.al},
+	Author = {et.al George B. Moody},
 	Title = {PhysioNet: A Web-Based Resource for the Study of Physiologic Signals},
 	Url = {http://ecg.mit.edu/george/publications/physionet-embs-2001.pdf},
 	Retrieved = {October 21, 2016}
@@ -266,7 +265,7 @@
 }
 
 @article{APNEA_ECGDB,
-	Author = {T Penzel et.al},
+	Author = {et.al T\_Penzel},
 	Title = {Data for development and evaluation},
 	Url = {http://ecg.mit.edu/george/publications/apnea-ecg-cinc-2000.pdf},
 	Retrieved = {October 21, 2016},
@@ -322,14 +321,14 @@
 }
 
 @article{MIT_BIH_slpdb,
-	Author = {Y.ICHIMARU, GB.MOODY},
+	Author = {et.al Y.Ichimaru},
 	Title = {Development of the polysomnographic database on CD-ROM},
 	Url = {http://ecg.mit.edu/george/publications/slpdb-pcn-1999.pdf},
 	Retrieved = {October 21, 2016}
 }
 
 @article{MIT_BIH_WFDB,
-	Author = {George B. Moody},
+	Author = {George, B. Moody},
 	Title = {WFDB Programmer's Guide},
 	Url = {https://www.physionet.org/physiotools/wpg/},
 	Retrieved = {October 21, 2016}
@@ -413,7 +412,7 @@
 }
 
 @article{SP,
-	Author = {Svein Petter Gjørby},
+	Author = {Gjørby, Svein Petter},
 	Title = {Generic data acquisition for mobile platforms, the CESAR acquisition toll},
 	year = {2016}
 }
@@ -451,15 +450,15 @@
 }
 
 @article{OWASP,
-	Author = {veracode},
-	Title = {OWASP TOP 10 VULNERABILITIES},
+	Author = {veracode.com},
+	Title = {Owasp top 10 vulnerabilities},
 	Url = {https://www.veracode.com/directory/owasp-top-10},
 	Retrieved = {January 26, 2017},
 	year = {2017}
 }
 
 @article{ORMdotNET,
-	Author = {Terry Halpin},
+	Author = {Halpin, Terry},
 	Title = {Object-Role Modeling},
 	Url = {http://www.orm.net},
 	Retrieved = {January 26, 2017},
@@ -467,7 +466,7 @@
 }
 
 @article{ORMdotNET1,
-	Author = {Terry Halpin},
+	Author = {Halpin, Terry},
 	Title = {Object-Role Modeling (ORM/NIAM)},
 	Url = {http://www.orm.net/pdf/springer.pdf},
 	Retrieved = {January 26, 2017},
@@ -475,7 +474,7 @@
 }
 
 @article{ORMdotNET2,
-	Author = {Terry Halpin},
+	Author = {Halpin, Terry},
 	Title = {ORM 2},
 	Url = {http://www.orm.net/pdf/ORM2.pdf},
 	Retrieved = {January 26, 2017},
@@ -491,7 +490,7 @@
 }
 
 @article{DSMS_WINDOW,
-	Author = {Emanuele Panigati, Fabio A. Schreiber, and Carlo Zaniolo},
+	Author = {et.al Emanuele\_Panigati},
 	Title = {Data Streams and Data Stream Management Systems and Languages},
 	Url = {http://eecs.wsu.edu/~yinghui/mat/courses/spring%202016/Reading/chp5-data%20stream%20management.pdf},
 	Retrieved = {February 19, 2017},
@@ -499,7 +498,7 @@
 }
 
 @article{CONCEPTUAL_BOOK,
-	Author = {David W. Embley Bernhard Thalheim},
+	Author = {Thalheim, David W. Embley Bernhard},
 	Title = {Handbook of Conceptual Modeling},
 	ISBN = {978-3-642-15864-3},
 	year = {2011}
@@ -513,7 +512,7 @@
 }
 
 @article{INF3100,
-	Author = {Evgenij Thorstensen},
+	Author = {Evgenij\_Thorstensen},
 	Title = {Database system course},
 	Url = {http://www.uio.no/studier/emner/matnat/ifi/INF3100/v17/},
 	year = {2017}
@@ -528,14 +527,14 @@
 }
 
 @article{INF3100_Recipe_book,
-	Author = {Ellen Munthe-Kaas},
+	Author = {Munthe-Kaas, Ellen},
 	Title = {Recipe book},
 	Url = {http://www.uio.no/studier/emner/matnat/ifi/INF3100/v16/undervisningsmateriale/forelesningsmateriale/oppskriftsbok.pdf},
 	year = {2017}
 }
 
 @article{INF1050BOOK,
-	Author = {Ian Sommerville},
+	Author = {Sommerville Ian},
 	Title = {Software Engineering},
 	ISBN = {13: 978-0-13-705346-9},
 	year = {2017}
@@ -570,14 +569,14 @@
 }
 
 @article{DEVELOPERANDROIDAPI,
-	Author = {developer android},
+	Author = {Android},
 	Title = {Dashboards},
 	Url = {https://developer.android.com/about/dashboards/index.html},
 	year = {2017}
 }
 
 @article{DEVELOPERANDROIDSQL,
-	Author = {developer android},
+	Author = {Android},
 	Title = {android.database.sqlite},
 	Url = {https://developer.android.com/reference/android/database/sqlite/package-summary.html},
 	year = {2017}
@@ -591,28 +590,28 @@
 }
 
 @article{CONSUMERPRODUCER,
-	Author = {WIKIPEDIA},
+	Author = {Wikipedia},
 	Title = {Producer and consumer problem},
 	Url = {https://en.wikipedia.org/wiki/Producer–consumer_problem},
 	year = {2017}
 }
 
 @article{GRAPHVIEW,
-	Author = {grapview},
+	Author = {Grapview\_code},
 	Title = {LineGraphSeries java file},
 	Url = {https://github.com/appsthatmatter/GraphView/blob/master/src/main/java/com/jjoe64/graphview/series/LineGraphSeries.java},
 	year = {2017}
 }
 
 @article{sleepfoundation,
-	Author = {SleepFoundation},
+	Author = {Sleep_Foundation},
 	Title = {Recommends new sleep times},
 	Url = {https://sleepfoundation.org/press-release/national-sleep-foundation-recommends-new-sleep-times},
 	year = {2017}
 }
 
 @article{GRAPHVIEWMAIN,
-	Author = {grapview},
+	Author = {Grapview},
 	Title = {Graph View Android},
 	Url = {http://www.android-graphview.org},
 	year = {2017}
@@ -626,7 +625,7 @@
 }
 
 @article{SLEEP_M_UNDIAG,
-	Author = {Sleep Medicine},
+	Author = {Sleep\_Medicine},
 	Title = {Prevalence of undiagnosed obstructive sleep apnea among adult surgical patients in an academic medical center},
 	Url = {http://www.sciencedirect.com/science/article/pii/S1389945708003079},
 	year = {2009}
@@ -640,28 +639,28 @@
 }
 
 @article{NCBINLM,
-	Author = {Naresh},
+	Author = {et.al Naresh},
 	Title = {The Epidemiology of Adult Obstructive Sleep Apnea},
 	Url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2645248/pdf/PROCATS52136.pdf},
 	year = {2008}
 }
 
 @article{IEEESLEEPAP,
-	Author = {Behar},
+	Author = {et.al Behar},
 	Title = {SleepAp: An Automated Obstructive Sleep Apnoea Screening Application for Smartphones},
 	Url = {http://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6712460},
 	year = {2013}
 }
 
 @article{noxmedical,
-	Author = {noxmedical},
+	Author = {Noxmedical},
 	Title = {Advancing sleep diagnostics through simplification, increased efficiency and comfort for all patients},
 	Url = {http://www.noxmedical.com},
 	year = {retrieved 2017}
 }
 
 @article{tcts,
-	Author = {Universite de Mons},
+	Author = {de Mons Universite},
 	Title = {The DREAMS Apnea Database},
 	Url = {http://www.tcts.fpms.ac.be/~devuyst/Databases/DatabaseApnea/},
 	year = {retrieved 2017}
@@ -689,15 +688,15 @@
 }
 
 @article{Nicolas,
-	Author = {Nicolas},
+	Author = {et.al Nicolas},
 	Title = {A Database in Every Sensor},
 	Url = {http://dunkels.com/adam/tsiftes11database.pdf},
 	year = {retrieved 2017}
 }
 
-@article{Alfonso,
-	Author = {Et.al Alfonso},
-	Title = {Management of Streaming Body Sensor Data for Medical Information Systems},
+@article{LittleD,
+	Author = {et.al Graeme},
+	Title = {A SQL Database for Sensor Nodes and Embedded Applications},
 	Url = {http://ai2-s2-pdfs.s3.amazonaws.com/e1d6/7eac67173b03966b4d038bdfaa1f6acd0986.pdf},
 	year = {retrieved 2017}
 }
